k8s/study/dns/pod.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dns-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dns-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache

  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
